# arisu-ffxiv

./: Cargo.toml  README.md
src/: general_timers.rs  main.rs  mod.rs  time_utils.rs  zone_weather_timer.rs
src/web/: homepage.rs  mod.rs  routes.rs  weather_routes.rs
src/web/routes/: utils.rs
src/web/static/: weather-card.css
src/zone_weather_timer/utils/: mod.rs  time_converter.rs
