[package]
name = "arisu-ffxiv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
ffxiv-chronowatcher = "0.0.4"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
serde_json = "1.0"
